# Proiect_POO

./: CMakeLists.txt  Data.cpp  Data.h  Exceptii.cpp  Exceptii.h  Exercitiu.cpp  Exercitiu.h  Exercitiu_brate.cpp  Exercitiu_brate.h  Exercitiu_picioare.cpp  Exercitiu_picioare.h  Exercitiu_piept.cpp  Exercitiu_piept.h  Exercitiu_spate.cpp  Exercitiu_spate.h  Exercitiu_umeri.cpp  Exercitiu_umeri.h  Mancare.cpp  Mancare.h  Program.cpp  Program.h  main.cpp
Proiect_POO/: CMakeLists.txt  Data.cpp  Data.h  Exceptii.cpp  Exceptii.h  Exercitiu.cpp  Exercitiu.h  Exercitiu_brate.cpp  Exercitiu_brate.h  Exercitiu_factory.cpp  Exercitiu_factory.h  Exercitiu_picioare.cpp  Exercitiu_picioare.h  Exercitiu_piept.cpp  Exercitiu_piept.h  Exercitiu_spate.cpp  Exercitiu_spate.h  Exercitiu_umeri.cpp  Exercitiu_umeri.h  Mancare.cpp  Mancare.h  Program.cpp  Program.h  main.cpp
Proiect_POO/include/: exercitiu.h
include/: exercitiu.h
